Added some styling and played around with click eventListener changes

--- a/index.html
+++ b/index.html
@@ -22,26 +22,28 @@
       <!--Change to clients img-->
     </header>
     <main id="content">
-      <h1>Cards Title</h1>
-      <div class="dashboard">
+      <div id="dashboard">
+        <h1>Cards Title</h1>
         <p>Purpose - why should someone do this exercise?</p>
         <p>Instructions - how does this interface work?</p>
       </div>
-      <div class="saves">
-        <div class="save">save1</div>
-        <div class="save">save2</div>
-        <div class="save">save3</div>
-        <div class="save">save4</div>
-        <div class="save">save5</div>
-      </div>
-      <div class="deck">
-        <button class="btn">V&Co.</button>
-      </div>
-      <div class="discard">
-        <p>discard</p>
-      </div>
-      <div class="maybe">
-        <p>maybe</p>
+      <div id="tabletop">
+        <div class="placeholders">
+          <div class="placeholder">save1</div>
+          <div class="placeholder">save2</div>
+          <div class="placeholder">save3</div>
+          <div class="placeholder">save4</div>
+          <div class="placeholder">save5</div>
+        </div>
+        <div class="deck">
+          <button class="btn">V&Co.</button>
+        </div>
+        <div class="discard">
+          <p>discard</p>
+        </div>
+        <div class="maybe">
+          <p>maybe</p>
+        </div>
       </div>
     </main>
   </body>
