Added a few comments to index.html

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
       <!--Change to clients img-->
     </header>
     <main id="content">
+      <!--Top area with description and instructions-->
       <div id="dashboard">
         <h1>Cards Title</h1>
         <p>Purpose - why should someone do this exercise?</p>
         <p>Instructions - how does this interface work?</p>
       </div>
+      <!--End Top Area-->
+      <!--Card display area with "deck" and different piles-->
       <div id="tabletop">
         <div class="placeholders">
           <div class="placeholder">save1</div>
@@ -44,6 +47,7 @@
         <div class="maybe">
           <p>maybe</p>
         </div>
+        <!--End Card Area-->
       </div>
     </main>
   </body>
